[gd_scene load_steps=23 format=3 uid="uid://b6i75ojxg73j6"]

[ext_resource type="Shader" path="res://Assets/Shaders/PauseMenu.gdshader" id="1_711cb"]
[ext_resource type="Script" path="res://Scripts/PauseMenu.gd" id="1_vffc8"]
[ext_resource type="FontFile" uid="uid://41y7qinwa7cl" path="res://Assets/Fonts/Asimovian-Regular.ttf" id="2_t6j7w"]
[ext_resource type="PackedScene" uid="uid://bbptuv1do4fe" path="res://Menus/SettingsMenu.tscn" id="4_dmox8"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_li37s"]
shader = ExtResource("1_711cb")
shader_parameter/lod = 0.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bqwde"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xs26u"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_l21ue"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6amil"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kh7pi"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lxm74"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qe1o3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fhfyx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fqduf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ljesw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rhig2"]

[sub_resource type="InputEventAction" id="InputEventAction_qlybi"]
action = &"ui_cancel"
pressed = true

[sub_resource type="Shortcut" id="Shortcut_gbddy"]
events = [SubResource("InputEventAction_qlybi")]

[sub_resource type="Animation" id="Animation_5r7n5"]
resource_name = "blur"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_s5nud"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_164d5"]
resource_name = "blur"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.8, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_i62js"]
_data = {
"Pause": SubResource("Animation_5r7n5"),
"RESET": SubResource("Animation_s5nud"),
"Unpause": SubResource("Animation_164d5")
}

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vffc8")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_li37s")
layout_mode = 0
offset_right = 1282.0
offset_bottom = 718.0

[node name="PanelContainer" type="PanelContainer" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 68.0
offset_top = 42.0
offset_right = 1216.0
offset_bottom = 617.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
alignment = 1

[node name="PausedGameTitle" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.537255, 0.0156863, 0.0156863, 1)
theme_override_fonts/font = ExtResource("2_t6j7w")
theme_override_font_sizes/font_size = 64
text = "Paused Game"
horizontal_alignment = 1

[node name="TitleMarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="ResumeBtn" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_hover_color = Color(0.517647, 0.458824, 0.458824, 1)
theme_override_colors/font_pressed_color = Color(0.537255, 0.0156863, 0.0156863, 1)
theme_override_fonts/font = ExtResource("2_t6j7w")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_bqwde")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_xs26u")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_l21ue")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_6amil")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_kh7pi")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_lxm74")
theme_override_styles/hover = SubResource("StyleBoxEmpty_qe1o3")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_fhfyx")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_fqduf")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_ljesw")
theme_override_styles/normal = SubResource("StyleBoxEmpty_rhig2")
shortcut = SubResource("Shortcut_gbddy")
text = "Resume"

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="RestartBtn" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_hover_color = Color(0.517647, 0.458824, 0.458824, 1)
theme_override_colors/font_pressed_color = Color(0.537255, 0.0156863, 0.0156863, 1)
theme_override_fonts/font = ExtResource("2_t6j7w")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_bqwde")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_xs26u")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_l21ue")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_6amil")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_kh7pi")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_lxm74")
theme_override_styles/hover = SubResource("StyleBoxEmpty_qe1o3")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_fhfyx")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_fqduf")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_ljesw")
theme_override_styles/normal = SubResource("StyleBoxEmpty_rhig2")
text = "Restart"

[node name="MarginContainer3" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="QuitBtn" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_hover_color = Color(0.517647, 0.458824, 0.458824, 1)
theme_override_colors/font_pressed_color = Color(0.537255, 0.0156863, 0.0156863, 1)
theme_override_fonts/font = ExtResource("2_t6j7w")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_bqwde")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_xs26u")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_l21ue")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_6amil")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_kh7pi")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_lxm74")
theme_override_styles/hover = SubResource("StyleBoxEmpty_qe1o3")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_fhfyx")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_fqduf")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_ljesw")
theme_override_styles/normal = SubResource("StyleBoxEmpty_rhig2")
text = "Quit
"

[node name="MarginContainer4" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="SettingsBtn" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_hover_color = Color(0.517647, 0.458824, 0.458824, 1)
theme_override_colors/font_pressed_color = Color(0.537255, 0.0156863, 0.0156863, 1)
theme_override_fonts/font = ExtResource("2_t6j7w")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_bqwde")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_xs26u")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_l21ue")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_6amil")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_kh7pi")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_lxm74")
theme_override_styles/hover = SubResource("StyleBoxEmpty_qe1o3")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_fhfyx")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_fqduf")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_ljesw")
theme_override_styles/normal = SubResource("StyleBoxEmpty_rhig2")
text = "Settings"

[node name="MarginContainer5" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="MainMenuBtn" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_hover_color = Color(0.517647, 0.458824, 0.458824, 1)
theme_override_colors/font_pressed_color = Color(0.537255, 0.0156863, 0.0156863, 1)
theme_override_fonts/font = ExtResource("2_t6j7w")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_bqwde")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_xs26u")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_l21ue")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_6amil")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_kh7pi")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_lxm74")
theme_override_styles/hover = SubResource("StyleBoxEmpty_qe1o3")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_fhfyx")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_fqduf")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_ljesw")
theme_override_styles/normal = SubResource("StyleBoxEmpty_rhig2")
text = "Main Menu"

[node name="MarginContainer6" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="DisableKillerBtn" type="CheckBox" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_hover_color = Color(0.517647, 0.458824, 0.458824, 1)
theme_override_colors/font_pressed_color = Color(0.537255, 0.0156863, 0.0156863, 1)
theme_override_fonts/font = ExtResource("2_t6j7w")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_bqwde")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_xs26u")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_l21ue")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_6amil")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_kh7pi")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_lxm74")
theme_override_styles/hover = SubResource("StyleBoxEmpty_qe1o3")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_fhfyx")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_fqduf")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_ljesw")
theme_override_styles/normal = SubResource("StyleBoxEmpty_rhig2")
text = "Disable Killer"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_i62js")
}

[node name="SettingsMenu" parent="." instance=ExtResource("4_dmox8")]
visible = false
layout_mode = 1

[connection signal="pressed" from="PanelContainer/VBoxContainer/ResumeBtn" to="." method="_on_resume_btn_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/RestartBtn" to="." method="_on_restart_btn_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/QuitBtn" to="." method="_on_quit_btn_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/SettingsBtn" to="." method="_on_settings_btn_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/MainMenuBtn" to="." method="_on_main_menu_btn_pressed"]
[connection signal="toggled" from="PanelContainer/VBoxContainer/DisableKillerBtn" to="." method="_on_disable_killer_btn_toggled"]
